--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Book review</title>
+  <title>Book Review</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -159,7 +159,7 @@
       </div>
 
       <div class="c-info">
-        <div class="c-innercap">Roma Publication 139
+        <div class="c-innercap"><a href="https://www.romapublications.org " target="_blank">Roma Publication</a> 139
         </div>
       </div>
       <!-- <div class="clear"></div> -->
@@ -213,7 +213,7 @@
 
       <div class="c-info">
         <div class="c-innercap">
-          Sternberg Press
+          <a href="https://www.sternberg-press.com/" target="_blank">Sternberg Press</a>
         </div>
       </div>
     </div>
@@ -265,7 +265,208 @@
 
       <div class="c-info">
         <div class="c-innercap">
-          Primary Information
+          <a href="https://primaryinformation.org/" target="_blank">Primary Information</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          Earthlight
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            André Breton
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          1993
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="http://writing.upenn.edu/epc/presses/sunmoon.html" target="_blank">
+          Sun & Moon Press</a><a href="http://www.greeninteger.com/about.cfm" target="_blank">(Green Integer)</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          Theater, Garden, Bestiary: A Materialist History of Exhibitions
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Tristan Garcia & Vincent Normand (eds.)
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2019
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.sternberg-press.com/" target="_blank">Sternberg Press</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          Weak Monument: <br>Architectures Beyond the Plinth
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Tadeáš Říha, Laura Linsi, <br>Roland Reemaa (eds.)
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2018
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.park-books.com/index.php?pd=pb&lang=en" target="_blank">Park Books</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          e-flux journal reader 2009
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Julieta Aranda, Brian Kuan Wood, <br>Anton Vidokle (eds.)
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2009
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.sternberg-press.com/" target="_blank">Sternberg Press</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          Reprint
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Karel Martens
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2015
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.romapublications.org " target="_blank">Roma Publication</a> 237
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          Recollected Work
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Linda Van Deursen & Armand Mevis
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2005
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap">Artimo - Gijs Stork
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          Unlearning Exercises: <br>Art Organizations as Sites for Unlearning
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Binna Choi, Annette Krauss, <br> Yolande van der Heide (eds.)
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2018
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://casco.art/" target="_blank">Casco Art Institute</a> & <a href="https://www.valiz.nl/" target="_blank">Valiz</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          XV Biennale of Graphic Design Brno 1992: <br>International Exhibition of Illustration and Editorial Art
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          1992
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap">Moravska Galerie
         </div>
       </div>
     </div>
@@ -274,6 +475,7 @@
 
 
 
+    <div class="bottom"></div>
 
 
 
