--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row last">
       <div class="c-title title">
         <div class="c-innercap">
           XV Biennale of Graphic Design Brno 1992: <br>International Exhibition of Illustration and Editorial Art
@@ -466,14 +466,14 @@
       </div>
 
       <div class="c-info">
-        <div class="c-innercap">Moravska Galerie
+        <div class="c-innercap ">Moravska Galerie
         </div>
       </div>
     </div>
 
-    <div class="bottom">
+    <!-- <div class="bottom"> -->
       <!-- ff -->
-    </div>
+    <!-- </div> -->
 
 
 
