--- a/index.html
+++ b/index.html
@@ -496,6 +496,132 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="sub-html/index-1.html">Nadja</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            André Breton
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          1963
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap">Éditions Gallimard(Collection Soleil)
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="sub-html/index-1.html">Four Times Through the Labyrinth</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Olaf Nicolai & Jan Wenzel
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2012
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://spectorbooks.com" target="_blank">Spector Books</a> & <a href="https://rollo-press.com/" target="_blank">Rollo Press</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="sub-html/index-1.html">A Grin Without a Cat</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Chris Marker
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2014
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.whitechapelgallery.org/" target="_blank">Whitechapel Gallery
+        </a></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="sub-html/index-1.html">Life, Once More<br>Forms of Reenactment in Contemporary Art</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Sven Lütticken
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2005
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="http://change.wdw.nl/" target="_blank">Witte de With Center for Contemporary Art</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="sub-html/index-1.html">One-to-One Reader</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Elisa van Joolen
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2018
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.onomatopee.net/" target="_blank">Onomatopee</a> 154
+        </a></div>
+      </div>
+    </div>
+
+
 
 
 
