--- a/sub-html/index-1.html
+++ b/sub-html/index-1.html
@@ -8,29 +8,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<style>
-
-body{
-  background-color: white;
-  margin:0;
-}
-
-img{
-  width:40%;
-  min-width: 400px;
-}
-
-b-box{
-margin:0;
-position: absolute;
-right:0;
-}
-
-</style>
-
 <body>
-  <div class="b-box">
-    <img src="img/t-i-s-r-k.jpg">
+
+  <div class="body-box">
+    <a href="../index.html">
+      <div class="row">
+        << </div> </a>
+        <div class="inner-box">
+            <img src="img/t-i-s-r-k.jpg">
+
+      </div>
   </div>
 
 </body>
