--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Book Review</title>
+  <title>&#9733;</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -499,7 +499,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          <a href="sub-html/index-1.html">Nadja</a>
+          <a href="">Nadja</a>
         </div>
       </div>
 
@@ -524,7 +524,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          <a href="sub-html/index-1.html">Four Times Through the Labyrinth</a>
+          <a href="">Four Times Through the Labyrinth</a>
         </div>
       </div>
 
@@ -549,7 +549,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          <a href="sub-html/index-1.html">A Grin Without a Cat</a>
+          <a href="">A Grin Without a Cat</a>
         </div>
       </div>
 
@@ -574,7 +574,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          <a href="sub-html/index-1.html">Life, Once More<br>Forms of Reenactment in Contemporary Art</a>
+          <a href="">Life, Once More<br>Forms of Reenactment in Contemporary Art</a>
         </div>
       </div>
 
@@ -599,7 +599,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          <a href="sub-html/index-1.html">One-to-One Reader</a>
+          <a href="">One-to-One Reader</a>
         </div>
       </div>
 
@@ -620,6 +620,58 @@
         </a></div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="">A Glass of Water</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Saskia Janssen
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2013
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.saskiajanssen.nl/" target="_blank">Saskia Janssen</a>, <a href="https://www.romapublications.org " target="_blank">Roma Publication</a>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="">A Brief History of Portable Literature</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+            Enrique Vila-Matas
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          2015
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap"><a href="https://www.ndbooks.com/#/ " target="_blank">New Directions</a>
+        </div>
+      </div>
+    </div>
+
 
 
 
