--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- <div class="list"> -->
 
-    <!-- <div class="line-inner">
+  <!-- <div class="line-inner">
       <div class="inner title">
         <div class="innercap">
           On the Self-Reflexive Page
@@ -36,7 +36,7 @@
       <div class="clear"></div>
     </div> -->
 
-    <!-- <div class="line-inner">
+  <!-- <div class="line-inner">
       <div class="inner title">
         <div class="innercap">
           Chris Marker
@@ -60,7 +60,7 @@
       <div class="clear"></div>
     </div> -->
 
-    <!-- <div class="line-inner">
+  <!-- <div class="line-inner">
       <div class="inner title">
         <div class="innercap">
           Portable Document Format
@@ -85,7 +85,7 @@
 
     </div> -->
 
-    <!-- <div class="line-inner">
+  <!-- <div class="line-inner">
       <div class="inner title">
         <div class="innercap">
           Native Genius in Anonymous Architecture in North America
@@ -112,7 +112,7 @@
       <div class="clear"></div>
     </div> -->
 
-    <!-- <div class="line-inner">
+  <!-- <div class="line-inner">
       <div class="inner title">
         <div class="innercap">
           Portable Document Format
@@ -227,7 +227,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Sibyl Moholy-Nagy
+          Sibyl Moholy-Nagy
         </div>
       </div>
 
@@ -253,7 +253,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Dan Graham
+          Dan Graham
         </div>
       </div>
 
@@ -279,7 +279,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            André Breton
+          André Breton
         </div>
       </div>
 
@@ -291,7 +291,7 @@
 
       <div class="c-info">
         <div class="c-innercap"><a href="http://writing.upenn.edu/epc/presses/sunmoon.html" target="_blank">
-          Sun & Moon Press</a><a href="http://www.greeninteger.com/about.cfm" target="_blank">(Green Integer)</a>
+            Sun & Moon Press</a><a href="http://www.greeninteger.com/about.cfm" target="_blank">(Green Integer)</a>
         </div>
       </div>
     </div>
@@ -305,7 +305,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Tristan Garcia & Vincent Normand (eds.)
+          Tristan Garcia & Vincent Normand (eds.)
         </div>
       </div>
 
@@ -330,7 +330,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Tadeáš Říha, Laura Linsi, <br>Roland Reemaa (eds.)
+          Tadeáš Říha, Laura Linsi, <br>Roland Reemaa (eds.)
         </div>
       </div>
 
@@ -355,7 +355,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Julieta Aranda, Brian Kuan Wood, <br>Anton Vidokle (eds.)
+          Julieta Aranda, Brian Kuan Wood, <br>Anton Vidokle (eds.)
         </div>
       </div>
 
@@ -380,7 +380,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Karel Martens
+          Karel Martens
         </div>
       </div>
 
@@ -405,7 +405,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Linda Van Deursen & Armand Mevis
+          Linda Van Deursen & Armand Mevis
         </div>
       </div>
 
@@ -430,7 +430,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Binna Choi, Annette Krauss, <br> Yolande van der Heide (eds.)
+          Binna Choi, Annette Krauss, <br> Yolande van der Heide (eds.)
         </div>
       </div>
 
@@ -455,7 +455,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Shannon Ebner
+          Shannon Ebner
         </div>
       </div>
 
@@ -471,7 +471,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
           <a href="sub-html/index-1.html">Twenties in the Sixties</a>
@@ -494,7 +494,7 @@
         <div class="c-innercap">Assembling Press & Wild&Woolley
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="row">
       <div class="c-title title">
@@ -505,7 +505,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            André Breton
+          André Breton
         </div>
       </div>
 
@@ -521,6 +521,35 @@
       </div>
     </div>
 
+
+    <div class="row">
+      <div class="c-title title">
+        <div class="c-innercap">
+          <a href="">Nadja</a>
+        </div>
+      </div>
+
+      <div class="c-author">
+        <div class="c-innercap">
+          André Breton
+        </div>
+      </div>
+
+      <div class="c-time">
+        <div class="c-innercap">
+          1960
+        </div>
+      </div>
+
+      <div class="c-info">
+        <div class="c-innercap">Grove Press
+        </div>
+      </div>
+    </div>
+
+
+
+
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
@@ -530,7 +559,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Olaf Nicolai & Jan Wenzel
+          Olaf Nicolai & Jan Wenzel
         </div>
       </div>
 
@@ -555,7 +584,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Chris Marker
+          Chris Marker
         </div>
       </div>
 
@@ -567,7 +596,7 @@
 
       <div class="c-info">
         <div class="c-innercap"><a href="https://www.whitechapelgallery.org/" target="_blank">Whitechapel Gallery
-        </a></div>
+          </a></div>
       </div>
     </div>
 
@@ -580,7 +609,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Sven Lütticken
+          Sven Lütticken
         </div>
       </div>
 
@@ -605,7 +634,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Elisa van Joolen
+          Elisa van Joolen
         </div>
       </div>
 
@@ -617,7 +646,7 @@
 
       <div class="c-info">
         <div class="c-innercap"><a href="https://www.onomatopee.net/" target="_blank">Onomatopee</a> 154
-        </a></div>
+          </a></div>
       </div>
     </div>
 
@@ -630,7 +659,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Saskia Janssen
+          Saskia Janssen
         </div>
       </div>
 
@@ -656,7 +685,7 @@
 
       <div class="c-author">
         <div class="c-innercap">
-            Enrique Vila-Matas
+          Enrique Vila-Matas
         </div>
       </div>
 
@@ -672,44 +701,311 @@
       </div>
     </div>
 
-
-
-
-
-
-    <!-- last -->
-
-    <div class="row last">
+    <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          XV Biennale of Graphic Design Brno 1992: <br>International Exhibition of Illustration and Editorial Art
+          <a href="">Cabinet d’amateur, an oblique novel</a>
         </div>
       </div>
 
       <div class="c-author">
         <div class="c-innercap">
-
+          Enrique Vila-Matas
         </div>
       </div>
 
       <div class="c-time">
         <div class="c-innercap">
-          1992
+          2019
         </div>
       </div>
 
       <div class="c-info">
-        <div class="c-innercap ">Moravska Galerie
+        <div class="c-innercap"><a href="https://www.whitechapelgallery.org/" target="_blank">Whitechapel Gallery
+          </a></div>
+      </div>
+      </div>
+
+
+      <div class="row">
+        <div class="c-title title">
+          <div class="c-innercap">
+            <a href="">Mad Love</a>
+          </div>
+        </div>
+
+        <div class="c-author">
+          <div class="c-innercap">
+            André Breton
+          </div>
+        </div>
+
+        <div class="c-time">
+          <div class="c-innercap">
+            1987
+          </div>
+        </div>
+
+        <div class="c-info">
+          <div class="c-innercap">University of Nebraska Press
+            </div>
+        </div>
+        </div>
+
+
+        <div class="row">
+          <div class="c-title title">
+            <div class="c-innercap">
+              <a href="">A BULLET FOR BUÑUEL: FRAGMENTS OF A FAILED BULLET</a>
+            </div>
+          </div>
+
+          <div class="c-author">
+            <div class="c-innercap">
+              Rick Myers
+            </div>
+          </div>
+
+          <div class="c-time">
+            <div class="c-innercap">
+              2017
+            </div>
+          </div>
+
+          <div class="c-info">
+            <div class="c-innercap">
+            <a href="https://primaryinformation.org/" target="_blank">Primary Information</a>
+            </div>
+          </div>
+          </div>
+
+
+          <div class="row">
+            <div class="c-title title">
+              <div class="c-innercap">
+                <a href="">On Onions</a>
+              </div>
+            </div>
+
+            <div class="c-author">
+              <div class="c-innercap">
+                Elad Lassry
+              </div>
+            </div>
+
+            <div class="c-time">
+              <div class="c-innercap">
+                2012
+              </div>
+            </div>
+
+            <div class="c-info">
+              <div class="c-innercap">
+              <a href="https://primaryinformation.org/" target="_blank">Primary Information</a>
+              </div>
+            </div>
+            </div>
+
+
+            <div class="row">
+              <div class="c-title title">
+                <div class="c-innercap">
+                  <a href="">Starting Back</a>
+                </div>
+              </div>
+
+              <div class="c-author">
+                <div class="c-innercap">
+                  Chris Marker
+                </div>
+              </div>
+
+              <div class="c-time">
+                <div class="c-innercap">
+                  2012
+                </div>
+              </div>
+
+              <div class="c-info">
+                <div class="c-innercap">
+                Wexner Center for the Arts
+                </div>
+              </div>
+              </div>
+
+              <div class="row">
+                <div class="c-title title">
+                  <div class="c-innercap">
+                    <a href="">Post-Digital Print — The Mutation of Publishing since 1894 </a>
+                  </div>
+                </div>
+
+                <div class="c-author">
+                  <div class="c-innercap">
+                    Alessandro Ludovico
+                  </div>
+                </div>
+
+                <div class="c-time">
+                  <div class="c-innercap">
+                    2012
+                  </div>
+                </div>
+
+                <div class="c-info">
+                  <div class="c-innercap">
+                    <a href="https://www.onomatopee.net/" target="_blank">Onomatopee</a> 77
+                      </a>
+                  </div>
+                </div>
+                </div>
+
+
+                <div class="row">
+                  <div class="c-title title">
+                    <div class="c-innercap">
+                      <a href="">Objects in This Mirror<br>Essays</a>
+                    </div>
+                  </div>
+
+                  <div class="c-author">
+                    <div class="c-innercap">
+                      Brian Dillon
+                    </div>
+                  </div>
+
+                  <div class="c-time">
+                    <div class="c-innercap">
+                      2014
+                    </div>
+                  </div>
+
+                  <div class="c-info">
+                    <div class="c-innercap">
+                      <a href="https://www.sternberg-press.com/" target="_blank">Sternberg Press</a>
+                        </a>
+                    </div>
+                  </div>
+                  </div>
+
+
+                  <div class="row">
+                    <div class="c-title title">
+                      <div class="c-innercap">
+                        <a href="">The Uses of Literature</a>
+                      </div>
+                    </div>
+
+                    <div class="c-author">
+                      <div class="c-innercap">
+                        Italo Calvino
+                      </div>
+                    </div>
+
+                    <div class="c-time">
+                      <div class="c-innercap">
+                        2016
+                      </div>
+                    </div>
+
+                    <div class="c-info">
+                      <div class="c-innercap">
+                        A Harvest Book
+
+                      </div>
+                    </div>
+                    </div>
+
+
+                    <div class="row">
+                      <div class="c-title title">
+                        <div class="c-innercap">
+                          <a href="">Extended Caption (DDDG)</a>
+                        </div>
+                      </div>
+
+                      <div class="c-author">
+                        <div class="c-innercap">
+                          Stuart Bailey
+                        </div>
+                      </div>
+
+                      <div class="c-time">
+                        <div class="c-innercap">
+                          2009
+                        </div>
+                      </div>
+
+                      <div class="c-info">
+                        <div class="c-innercap">
+                          <a href="https://www.romapublications.org " target="_blank">Roma Publication</a> 128
+                        </div>
+                      </div>
+                      </div>
+
+
+                      <div class="row">
+                        <div class="c-title title">
+                          <div class="c-innercap">
+                            <a href="">The Life and Opinions of Tristram Shandy: Gentleman</a>
+                          </div>
+                        </div>
+
+                        <div class="c-author">
+                          <div class="c-innercap">
+                            Laurence Sterne
+                          </div>
+                        </div>
+
+                        <div class="c-time">
+                          <div class="c-innercap">
+                            1928
+                          </div>
+                        </div>
+
+                        <div class="c-info">
+                          <div class="c-innercap">
+                            
+                          </div>
+                        </div>
+                        </div>
+
+
+
+
+      <!-- last -->
+
+      <div class="row last">
+        <div class="c-title title">
+          <div class="c-innercap">
+            XV Biennale of Graphic Design Brno 1992: <br>International Exhibition of Illustration and Editorial Art
+          </div>
+        </div>
+
+        <div class="c-author">
+          <div class="c-innercap">
+
+          </div>
+        </div>
+
+        <div class="c-time">
+          <div class="c-innercap">
+            1992
+          </div>
+        </div>
+
+        <div class="c-info">
+          <div class="c-innercap ">Moravska Galerie
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- <div class="bottom"> -->
+      <!-- <div class="bottom"> -->
       <!-- ff -->
-    <!-- </div> -->
+      <!-- </div> -->
 
 
 
-  </div>
+    </div>
 
 </body>
