--- a/index.html
+++ b/index.html
@@ -947,6 +947,32 @@
                       <div class="row">
                         <div class="c-title title">
                           <div class="c-innercap">
+                            <a href="sub-html/art-game.html">Art Games</a>
+                          </div>
+                        </div>
+
+                        <div class="c-author">
+                          <div class="c-innercap">
+
+                          </div>
+                        </div>
+
+                        <div class="c-time">
+                          <div class="c-innercap">
+                            1997
+                          </div>
+                        </div>
+
+                        <div class="c-info">
+                          <div class="c-innercap">
+
+                          </div>
+                        </div>
+                        </div>
+
+                      <div class="row">
+                        <div class="c-title title">
+                          <div class="c-innercap">
                             <a href="">The Life and Opinions of Tristram Shandy: Gentleman</a>
                           </div>
                         </div>
@@ -965,7 +991,7 @@
 
                         <div class="c-info">
                           <div class="c-innercap">
-                            
+
                           </div>
                         </div>
                         </div>
