--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          Portable Document Format
+          <a href="sub-html/pdf.html">Portable Document Format</a>
         </div>
       </div>
 
@@ -449,7 +449,7 @@
     <div class="row">
       <div class="c-title title">
         <div class="c-innercap">
-          The sun as error
+          <a href="sub-html/sun-as-error.html">The sun as error</a>
         </div>
       </div>
 
