--- a/sub-html/pdf.html
+++ b/sub-html/pdf.html
@@ -10,6 +10,11 @@
 
 <body>
 
+  <img src="https://64.media.tumblr.com/578883e789f7031f82999177f676a2e9/75423fd41029f93f-da/s1280x1920/57861528e0a7b27adfb57fa58774e7d755af4bf6.jpg" width="40%">
+
+  <img src="https://64.media.tumblr.com/0fbe3f359e4bc4c034ef21f34b1e9474/75423fd41029f93f-db/s1280x1920/2d1e8d541ebf4cf98471b69ab302925f0772823e.jpg" width="40%">
+  <br>
+
   Seth Price - Dispersion <a href="http://www.distributedhistory.com/Dispersion2016.pdf" target="_blank">http://www.distributedhistory.com/Dispersion2016.pdf</a>
   <br>
   NAÏVE SET THEORY by Anthony Huberman <a href="http://dextersinister.org/MEDIA/PDF/NaiveSetTheory.pdf" target="_blank">http://dextersinister.org/MEDIA/PDF/NaiveSetTheory.pdf</a>
