--- a/index.html
+++ b/index.html
@@ -1023,6 +1023,61 @@
                         </div>
                         </div>
 
+                        <div class="row">
+                          <div class="c-title title">
+                            <div class="c-innercap">
+                              <a href="">35 years of Visible Writing: a memoir</a>
+                            </div>
+                          </div>
+
+                          <div class="c-author">
+                            <div class="c-innercap">
+                              Richard Kostelanetz
+                            </div>
+                          </div>
+
+                          <div class="c-time">
+                            <div class="c-innercap">
+                              2004
+                            </div>
+                          </div>
+
+                          <div class="c-info">
+                            <div class="c-innercap">
+                              Koja Press
+
+                            </div>
+                          </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="c-title title">
+                              <div class="c-innercap">
+                                <a href="">Objects in This Mirror<br>Essays</a>
+                              </div>
+                            </div>
+
+                            <div class="c-author">
+                              <div class="c-innercap">
+                                Brian Dillon
+                              </div>
+                            </div>
+
+                            <div class="c-time">
+                              <div class="c-innercap">
+                                2014
+                              </div>
+                            </div>
+
+                            <div class="c-info">
+                              <div class="c-innercap">
+                                Sternberg Press
+
+                              </div>
+                            </div>
+                            </div>
+
+
 
 
 
