--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
       <div class="row last">
         <div class="c-title title">
           <div class="c-innercap">
-            XV Biennale of Graphic Design Brno 1992: <br>International Exhibition of Illustration and Editorial Art
+            <a href="sub-html/biennial.html">XV Biennale of Graphic Design Brno 1992: <br>International Exhibition of Illustration and Editorial Art</a>
           </div>
         </div>
 
